[package]
name = "game_simulation_library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "game_simulation_library"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
rand = "0.8.5"
rayon = "1.8.0"
